@@ -19,7 +19,7 @@ BOLD_MSG([System Calls (Headers)])
 AC_CHECK_HEADERS(errno.h fcntl.h netdb.h sys/resource.h utime.h wchar.h dnl
 pwd.h sys/time.h sys/unistd.h time.h unistd.h syslog.h signal.h dnl
 grp.h crypt.h utmpx.h stdlib.h shlobj.h netinet/in.h arpa/inet.h dnl
-sys/statvfs.h sys/statfs.h sys/param.h sys/wait.h)
+sys/statvfs.h sys/statfs.h sys/param.h sys/wait.h ftw.h)
 if test "$ac_cv_header_shlobj_h" = yes ; then
    LIBS=${LIBS}' -luser32 -lole32 -loleaut32 -luuid';
 fi
@@ -50,7 +50,7 @@ fchmod fchown fstat link stat symlink utime mknod chmod umask fsync sync dnl
 ftruncate truncate getusershell endusershell dnl
 erf erfc lgamma tgamma fstatvfs statvfs getpriority setpriority dnl
 crypt encrypt setkey GlobalMemoryStatusEx strerror dnl
-gethostid sethostid getdomainname setdomainname)
+gethostid sethostid getdomainname setdomainname nftw)
 AC_FUNC_CHOWN
 gl_FUNC_MKTIME
 gl_FUNC_GNU_STRFTIME
