@@ -181,6 +181,66 @@
    </simpara></listitem></varlistentry></variablelist>
    All slots are read-only.
  </para></listitem></varlistentry>
+ <varlistentry id="file-tree-walk"><term><code>(POSIX:FILE-TREE-WALK &path-r;
+   &func-r; &key-amp; FD-LIMIT CHDIR DEPTH MOUNT PHYS)</code></term>
+  <listitem><para>For each object under &path-r; calls &func-r; with 5
+   arguments: <orderedlist>
+    <listitem><simpara>the pathname of the object</simpara></listitem>
+    <listitem><simpara>the <type>FILE-STAT</type> instance containing
+     information on the object (or &nil;, see below)</simpara></listitem>
+    <listitem><para>a keyword giving additional information.
+      Its value is one of the following:<variablelist>
+      <varlistentry><term><constant>:F</constant></term>
+       <listitem><simpara>The object is a file.
+      </simpara></listitem></varlistentry>
+      <varlistentry><term><constant>:D</constant></term>
+       <listitem><simpara>The object is a directory.
+      </simpara></listitem></varlistentry>
+      <varlistentry><term><constant>:DP</constant></term>
+       <listitem><simpara>The object is a directory and subdirectories have
+        been visited. (This condition shall only occur if the
+        <constant>:DEPTH</constant> argument is non-&nil;.)
+      </simpara></listitem></varlistentry>
+      <varlistentry><term><constant>:SL</constant></term>
+       <listitem><simpara>The object is a symbolic link. (This condition shall
+        only occur if the <constant>PHYS</constant> argument is non-&nil;.)
+      </simpara></listitem></varlistentry>
+      <varlistentry><term><constant>:SLN</constant></term>
+       <listitem><simpara>The object is a symbolic link that does not name an
+        existing file. (This condition shall only occur if the
+        <constant>PHYS</constant> argument is &nil;.)
+      </simpara></listitem></varlistentry>
+      <varlistentry><term><constant>:DNR</constant></term>
+       <listitem><simpara>The object is a directory that cannot be read.
+        The fn function shall not be called for any of its descendants.
+      </simpara></listitem></varlistentry>
+      <varlistentry><term><constant>:NS</constant></term>
+       <listitem><simpara> The <function role="unix">stat</function> function
+       failed on the object because of lack of appropriate permission.
+       The <type>FILE-STAT</type> argument is &nil;.
+       If <function role="unix">stat</function> fails for any other reason,
+       and &err-sig;.</simpara></listitem></varlistentry></variablelist>
+     </para></listitem>
+    <listitem><simpara>the offset of the object's filename in the pathname
+     passed as the first argument to &func-r;.</simpara></listitem>
+    <listitem><simpara>the depth relative to the root of the walk,
+     where the root level is 0.</simpara></listitem></orderedlist></para>
+   <simpara>As soon as &func-r; returns non-&nil;, this function returns that
+    value; if &func-r; always returns &nil;, then this function also returns
+    &nil; when the file tree is exhausted.</simpara>
+   <simpara>The <constant>:FD-LIMIT</constant> argument defaults to 5.</simpara>
+   <simpara>If <constant>:CHDIR</constant> argument is non-&nil;, the function
+    shall change the current working directory to each directory as it reports
+    files in that directory</simpara>
+   <simpara>If <constant>:DEPTH</constant> argument is non-&nil;, the function
+    shall report all files in a directory before reporting the directory
+    itself.</simpara>
+   <simpara>If <constant>:MOUNT</constant> argument is non-&nil;, the function
+    shall only report files in the same file system as &path-r;.</simpara>
+   <simpara>If <constant>:PHYS</constant> argument is non-&nil;, the function
+    shall perform a physical walk and shall not follow symbolic links.</simpara>
+   <simpara>Calls <function role="unix">nftw</function>.</simpara>
+  </listitem></varlistentry>
  <varlistentry id="file-info"><term><code>(OS:FILE-INFO &path-r;
     &optional-amp; all)</code></term>
   <listitem><para>Return the <type>FILE-INFO</type> structure.
