@@ -24,6 +24,9 @@ User visible changes
 * New module ASDF provides a system definition facility.
   See <http://clisp.cons.org/impnotes/asdf.html> for details.
 
+* New function POSIX:FILE-TREE-WALK calls nftw().
+  See <http://clisp.cons.org/impnotes/syscalls.html#file-tree-walk> for details.
+
 * FFI now converts REALs to FLOATs automatically as necessary.
 
 * Bug fixes:
